Stop strange word wrap

--- a/src/components/CreateLinkTile.scss
+++ b/src/components/CreateLinkTile.scss
@@ -35,7 +35,7 @@ limitations under the License.
         color: $foreground;
     }
 
-    h1 {
+    .linkHeader h1 {
         word-break: break-all;
     }
 
